// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Group Component should render item group label 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexWrap": "wrap",
      },
      Object {},
    ]
  }
>
  <ForwardRef
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#C9D6DF",
        "borderRadius": 4,
        "borderWidth": 1,
        "marginEnd": 12,
        "paddingHorizontal": 12,
        "paddingVertical": 6,
      }
    }
    testID="btngrp"
  >
    <Label
      style={
        Object {
          "color": "#667686",
        }
      }
      textType="regular"
      type="large"
    />
  </ForwardRef>
  <ForwardRef
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#C9D6DF",
        "borderRadius": 4,
        "borderWidth": 1,
        "marginEnd": 12,
        "paddingHorizontal": 12,
        "paddingVertical": 6,
      }
    }
    testID="btngrp"
  >
    <Label
      style={
        Object {
          "color": "#667686",
        }
      }
      textType="regular"
      type="large"
    />
  </ForwardRef>
</View>
`;

exports[`Button Group Component should render item group text 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexWrap": "wrap",
      },
      Object {},
    ]
  }
>
  <ForwardRef
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#C9D6DF",
        "borderRadius": 4,
        "borderWidth": 1,
        "marginEnd": 12,
        "paddingHorizontal": 12,
        "paddingVertical": 6,
      }
    }
    testID="btngrp"
  >
    <Text
      style={
        Object {
          "color": "#667686",
        }
      }
      textType="regular"
      type="large"
    />
  </ForwardRef>
  <ForwardRef
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#C9D6DF",
        "borderRadius": 4,
        "borderWidth": 1,
        "marginEnd": 12,
        "paddingHorizontal": 12,
        "paddingVertical": 6,
      }
    }
    testID="btngrp"
  >
    <Text
      style={
        Object {
          "color": "#667686",
        }
      }
      textType="regular"
      type="large"
    />
  </ForwardRef>
</View>
`;
